--- a/website/docs/codegen/CLI/cli.mdx
+++ b/website/docs/codegen/CLI/cli.mdx
@@ -9,13 +9,13 @@ sidebar_label: CLI overview
 
 It supports **two generation modes**:
 
-- **[OpenAPI mode](/codegen/CLI/openapi-cli.mdx)** (`qraft openapi`) — generates code from OpenAPI documents with OpenAPI plugins.
-- **[AsyncAPI mode](/codegen/CLI/asyncapi-cli.mdx)** (`qraft asyncapi`) — enables generation from AsyncAPI documents with AsyncAPI plugins.
+- **[OpenAPI mode](/codegen/CLI/openapi.mdx)** (`qraft openapi`) — generates code from OpenAPI documents with OpenAPI plugins.
+- **[AsyncAPI mode](/codegen/CLI/asyncapi.mdx)** (`qraft asyncapi`) — enables generation from AsyncAPI documents with AsyncAPI plugins.
 
 This lets you use one CLI package and one binary (`qraft`) for both OpenAPI and AsyncAPI schemas.
 
 ## Detailed docs
 
-- [OpenAPI mode (`qraft openapi`)](/codegen/CLI/openapi-cli.mdx)
-- [AsyncAPI mode (`qraft asyncapi`)](/codegen/CLI/asyncapi-cli.mdx)
+- [OpenAPI mode (`qraft openapi`)](/codegen/CLI/openapi.mdx)
+- [AsyncAPI mode (`qraft asyncapi`)](/codegen/CLI/asyncapi.mdx)
 - [Redocly config support](/codegen/CLI/redocly-config.mdx)
